# shv_mingw

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md  exports.cpp  exports.h
shv_test/: CMakeLists.txt  main.cpp
shv_test/shv/: main.h
